--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="inform_section__fields">
     <div class="field-block-multiple">
-
+      <!-- <form #form="ngForm" > -->
       <div class="single-additional-education-block"
         *ngFor="let arrayItem of userSettings.additionalEducation; let i = index">
 
@@ -85,7 +85,7 @@
         </button>
       </div>
 
-
+    <!-- </form> -->
     </div>
   </div>
 </div>
