--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
@@ -17,14 +17,14 @@
 
       <div class="field-block-multiple">
 
-        <div class="single-lang-wrapper" *ngFor="let arrayItem of userSettings.languages; let i = index">
+        <div class="single-lang-wrapper" *ngFor="let arrayItem of userSettings.language; let i = index">
           <div class="field-block">
             <h5 class="fields-title">Языка</h5>
-            <input class="fields-value" type="text" [(ngModel)]="userSettings.languages[i].langName" maxlength="15">
+            <input class="fields-value" type="text" [(ngModel)]="userSettings.language[i].langName" maxlength="15">
           </div>
           <div class="field-block language-level">
             <label class="block-title" for="langLevel">Уровень владения</label>
-            <mat-select name="langLevel" id="langLevel" [(ngModel)]="userSettings.languages[i].langLevel">
+            <mat-select name="langLevel" id="langLevel" [(ngModel)]="userSettings.language[i].langLevel">
               <ng-container *ngFor="let langLevel of languagesLevel">
                 <mat-option [value]="langLevel">{{ langLevel }}</mat-option>
               </ng-container>
