--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.html
@@ -6,7 +6,9 @@
       <app-general-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-general-user-settings>
     </mat-tab>
     <mat-tab label="Финансы"></mat-tab>
-    <mat-tab label="Уведомления"></mat-tab>
+    <mat-tab label="Уведомления">
+      <app-notifications-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-notifications-user-settings>
+    </mat-tab>
     <mat-tab label="Безопасность"></mat-tab>
   </mat-tab-group>
 </div>
