--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
@@ -4,88 +4,113 @@
   </div>
   <div class="inform_section__fields">
     <div class="field-block-multiple">
-      <!-- <form #form="ngForm" > -->
-      <div class="single-additional-education-block"
-        *ngFor="let arrayItem of userSettings.additionalEducation; let i = index">
+      <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+        <div class="single-additional-education-block"
+          *ngFor="let arrayItem of userSettings.additionalEducation; let i = index">
 
-        <div class="field-block">
-          <h5 class="fields-title">Учебное заведение</h5>
-          <input class="fields-value" type="text"
-            [(ngModel)]="userSettings.additionalEducation[i].additionalInstitution">
-        </div>
-
-        <div class="toggle_block" [ngClass]="{ hidden: openItem !== i }">
           <div class="field-block">
-            <h5 class="fields-title">Название курсов</h5>
-            <input class="fields-value" type="text" [(ngModel)]="userSettings.additionalEducation[i].courseName">
-          </div>
-
-          <div class="studyPeriod">
-            <div class="period-wrapper">
-              <div class="field-block service-selects mounthes">
-                <label class="block-title" for="startEducation">Начало
-                </label>
-                <mat-select name="startEducationMounth" id="startEducationMounth"
-                  [(ngModel)]="userSettings.additionalEducation[i].startStudyMounth">
-                  <ng-container *ngFor="let startEducationMounth of mounth">
-                    <mat-option [value]="startEducationMounth">{{ startEducationMounth }}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </div>
-              <div class="field-block service-selects">
-                <mat-select name="startEducationYear" id="startEducationYear"
-                  [(ngModel)]="userSettings.additionalEducation[i].startStudyYear">
-                  <ng-container *ngFor="let startYear of createYearArray()">
-                    <mat-option [value]="startYear">{{ startYear }}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </div>
-            </div>
-
-            <div class="period-wrapper">
-              <div class="field-block service-selects mounthes">
-                <label class="block-title" for="startEducation">Окончание
-                </label>
-                <mat-select name="endEducationMounth" id="endEducationMounth"
-                  [(ngModel)]="userSettings.additionalEducation[i].endStudyMounth">
-                  <ng-container *ngFor="let endStudyMounth of mounth">
-                    <mat-option [value]="endStudyMounth">{{ endStudyMounth }}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </div>
-              <div class="field-block service-selects">
-                <mat-select name="endEducationYear" id="endEducationYear"
-                  [(ngModel)]="userSettings.additionalEducation[i].endStudyYear">
-                  <ng-container *ngFor="let endStudyYear of createYearArray()">
-                    <mat-option [value]="endStudyYear">{{ endStudyYear }}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </div>
+            <h5 class="fields-title">Учебное заведение</h5>
+            <input
+              class="fields-value"
+              type="text"
+              required
+              #institution="ngModel"
+              minlength="4"
+              name="institution-{{i}}"
+              [(ngModel)]="userSettings.additionalEducation[i].additionalInstitution"
+              [ngClass] = "{not_Valid: !institution.valid && submited}"
+            >
+            <div *ngIf="!institution.valid && submited" class="alert-danger">
+              <p>institution must be at least 4 characters long.</p>
             </div>
           </div>
 
-          <div class="add-photos">
-            <button class="add btn-tetraty">
-              <span>Загрузить файл/фото диплома</span>
+          <div class="toggle_block" [ngClass]="{ hidden: openItem !== i+1 }">
+            <div class="field-block">
+              <h5 class="fields-title">Название курсов</h5>
+              <input
+                class="fields-value"
+                type="text"
+                required
+                #specialty="ngModel"
+                minlength="4"
+                name="specialty-{{i}}"
+                [(ngModel)]="userSettings.additionalEducation[i].courseName"
+                [ngClass] = "{not_Valid: !specialty.valid && submited}"
+              >
+              <div *ngIf="!specialty.valid && submited" class="alert-danger">
+                <p>specialty must be at least 4 characters long.</p>
+              </div>
+            </div>
+
+            <div class="studyPeriod">
+              <div class="period-wrapper">
+                <div class="field-block service-selects mounthes">
+                  <label class="block-title" for="startEducation">Начало
+                  </label>
+                  <mat-select name="startEducationMounth" id="startEducationMounth"
+                    [(ngModel)]="userSettings.additionalEducation[i].startStudyMounth">
+                    <ng-container *ngFor="let startEducationMounth of mounth">
+                      <mat-option [value]="startEducationMounth">{{ startEducationMounth }}</mat-option>
+                    </ng-container>
+                  </mat-select>
+                </div>
+                <div class="field-block service-selects">
+                  <mat-select name="startEducationYear" id="startEducationYear"
+                    [(ngModel)]="userSettings.additionalEducation[i].startStudyYear">
+                    <ng-container *ngFor="let startYear of createYearArray()">
+                      <mat-option [value]="startYear">{{ startYear }}</mat-option>
+                    </ng-container>
+                  </mat-select>
+                </div>
+              </div>
+
+              <div class="period-wrapper">
+                <div class="field-block service-selects mounthes">
+                  <label class="block-title" for="startEducation">Окончание
+                  </label>
+                  <mat-select name="endEducationMounth" id="endEducationMounth"
+                    [(ngModel)]="userSettings.additionalEducation[i].endStudyMounth">
+                    <ng-container *ngFor="let endStudyMounth of mounth">
+                      <mat-option [value]="endStudyMounth">{{ endStudyMounth }}</mat-option>
+                    </ng-container>
+                  </mat-select>
+                </div>
+                <div class="field-block service-selects">
+                  <mat-select name="endEducationYear" id="endEducationYear"
+                    [(ngModel)]="userSettings.additionalEducation[i].endStudyYear">
+                    <ng-container *ngFor="let endStudyYear of createYearArray()">
+                      <mat-option [value]="endStudyYear">{{ endStudyYear }}</mat-option>
+                    </ng-container>
+                  </mat-select>
+                </div>
+              </div>
+            </div>
+
+            <div class="add-photos">
+              <button class="add btn-tetraty">
+                <span>Загрузить файл/фото диплома</span>
+              </button>
+            </div>
+
+            <button type="button" class="delete-education">
+              <i class="material-icons" (click)="deleteEducation(i)">delete</i>
             </button>
+
+            <button type="button" class="change"><i class="material-icons create"
+                (click)="chooseItem(i+1)">create</i></button>
           </div>
 
-          <button type="button" class="delete-education">
-            <i class="material-icons" (click)="deleteEducation(i)">delete</i>
-          </button>
-
-          <button type="button" class="change"><i class="material-icons create"
-              (click)="chooseItem(i)">create</i></button>
         </div>
-        <button class="add-education add btn-tetraty" (click)="addEducation(i+1)">
+
+        <button class="add-education add btn-tetraty" type="submit">
           <i class="material-icons">
             add_circle_outline
           </i>
           <span>Добавить образование</span>
         </button>
-      </div>
 
-    <!-- </form> -->
+      </form>
     </div>
   </div>
 </div>
