--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
@@ -40,8 +40,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 50px;
-  // margin-top: 20px;
   position: relative;
   justify-content: space-between;
   .single-lang-wrapper{
@@ -49,23 +47,6 @@
     justify-content: space-between;
     margin-top: 20px;
     position: relative;
-    &:last-child{
-      .add-languahe{
-        display: block;
-      }
-    }
-  }
-  .add-languahe{
-    display: none;
-    position: absolute;
-    bottom: -60px;
-    left: 0;
-    span{
-      padding-left: 10px;
-    }
-    .material-icons{
-      font-size: 20px;
-    }
   }
   .delete-language{
     position: absolute;
@@ -125,6 +106,16 @@
       }
 
     }
+  }
+}
+
+.add-languahe{
+  margin-top: 35px;
+  span{
+    padding-left: 10px;
+  }
+  .material-icons{
+    font-size: 20px;
   }
 }
 
