--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.html
@@ -5,11 +5,15 @@
     <mat-tab label="Общие">
       <app-general-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-general-user-settings>
     </mat-tab>
-    <mat-tab label="Финансы"></mat-tab>
+    <mat-tab label="Финансы">
+      <app-finance-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-finance-user-settings>
+    </mat-tab>
     <mat-tab label="Уведомления">
       <app-notifications-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-notifications-user-settings>
     </mat-tab>
-    <mat-tab label="Безопасность"></mat-tab>
+    <mat-tab label="Безопасность">
+      <app-security-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-security-user-settings>
+    </mat-tab>
   </mat-tab-group>
 </div>
 
