--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.html
@@ -1,5 +1,5 @@
 <div class="inform_section">
-  <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+  <form [formGroup]="myForm">
     <div class="inform_section__title">
       <h3>Смена пароля</h3>
     </div>
@@ -8,21 +8,46 @@
 
         <div class="fields">
           <h5 class="fields-title">Старый пароль</h5>
-          <!-- [(ngModel)]="userSettings.oldPassword" -->
-          <input class="fields-value" type="text"  name="oldPassword" maxlength="25">
+
+          <input class="fields-value" type="password"  name="oldPassword" maxlength="25">
         </div>
 
         <div class="fields">
+          <mat-form-field>
+            <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
+            <input class="fields-value" matInput  formControlName="password" required>
+            <mat-error *ngIf="myForm.hasError('required', 'password')">
+                Please enter your new password
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="fields">
+          <mat-form-field>
+            <h5 class="fields-title">Повторите новый пароль</h5>
+            <input class="fields-value" matInput  formControlName="confirmPassword" [errorStateMatcher]="matcher">
+            <mat-error *ngIf="myForm.hasError('notSame')">
+                Passwords do not match
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <!-- <div class="fields" >
           <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
-          <!-- [(ngModel)]="userSettings.newPassword" -->
-          <input class="fields-value" type="text"  name="newPassword" maxlength="25">
+          <input class="fields-value" type="password" matInput placeholder="New password" formControlName="password" required >
+          <div *ngIf="myForm.hasError('required', 'password')">
+            Please enter your new password
+          </div>
         </div>
 
-        <div class="fields">
-          <h5 class="fields-title">Повторите новый пароль</h5>
-          <!-- [(ngModel)]="userSettings.copyNewPassword" -->
-          <input class="fields-value" type="text"  name="copyNewPassword" maxlength="25">
-        </div>
+        <div class="fields" >
+
+            <h5 class="fields-title">Повторите новый пароль</h5>
+            <input class="fields-value" type="password" matInput placeholder="Confirm password" formControlName="confirmPassword" [errorStateMatcher]="matcher"  >
+            <div *ngIf="myForm.hasError('notSame')">
+              Passwords do not match
+            </div>
+
+        </div> -->
 
       </div>
     </div>
@@ -32,7 +57,7 @@
     </div>
     <div class="inform_section__fields">
       <div class="inputs-wrapper">
-
+<!--
         <div class="fields">
           <h5 class="fields-title">Ваш текущий e-mail</h5>
           <input class="fields-value" type="text" [(ngModel)]="userSettings.oldMail" name="oldMail" maxlength="15">
@@ -46,7 +71,7 @@
         <div class="fields">
           <h5 class="fields-title">Введите текущий пароль</h5>
           <input class="fields-value" type="text" [(ngModel)]="userSettings.copyNewMail" name="copyNewMail" maxlength="15">
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -55,4 +80,20 @@
     <button class="save-all" type="submit">сохранить изменения</button>
   </div>
   </form>
+
+  <!-- <form [formGroup]="myForm">
+    <mat-form-field>
+      <input matInput placeholder="New password" formControlName="password" required>
+      <mat-error *ngIf="myForm.hasError('required', 'password')">
+          Please enter your new password
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="Confirm password" formControlName="confirmPassword" [errorStateMatcher]="matcher">
+      <mat-error *ngIf="myForm.hasError('notSame')">
+          Passwords do not match
+      </mat-error>
+    </mat-form-field>
+  </form> -->
 </div>
