--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.html
@@ -1,5 +1,5 @@
 <div class="inform_section">
-  <form [formGroup]="myForm">
+  <form [formGroup]="myForm" (ngSubmit)="updateSettings(myForm)">
     <div class="inform_section__title">
       <h3>Смена пароля</h3>
     </div>
@@ -9,49 +9,37 @@
         <div class="fields">
           <div class="field-wrapper">
             <h5 class="fields-title">Старый пароль</h5>
-            <input class="fields-value" type="password"  name="oldPassword" maxlength="25">
+            <input class="fields-value" type="password" formControlName='oldPassword' maxlength="50">
           </div>
         </div>
 
-        <div class="fields">
-          <mat-form-field>
-            <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
-            <input class="fields-value" matInput  formControlName="newPassword" minlength="5" required>
-            <mat-error *ngIf="myForm.hasError('required', 'password')">
-                Please enter your new password
-            </mat-error>
-            <div class="error-message" *ngIf="f.errors?.minlength">
-              Name must be at least 5 characters long.
-            </div>
-          </mat-form-field>
-        </div>
-
-        <div class="fields">
-          <mat-form-field>
-            <h5 class="fields-title">Повторите новый пароль</h5>
-            <input class="fields-value" matInput  formControlName="confirmPassword" [errorStateMatcher]="matcher">
-            <mat-error *ngIf="myForm.hasError('notSame')">
-                Passwords do not match
-            </mat-error>
-          </mat-form-field>
-        </div>
-        <!-- <div class="fields" >
+        <form class="fields" formGroupName="passwords">
           <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
-          <input class="fields-value" type="password" matInput placeholder="New password" formControlName="password" required >
-          <div *ngIf="myForm.hasError('required', 'password')">
-            Please enter your new password
+          <input class="fields-value new-passrord" placeholder="New password" formControlName="newPassword" required >
+          <div class="pass-erorrs">
+            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
+            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasCapitalCase') ? 'unvalidated': 'validated'"></span>
+            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasSmallCase') ? 'unvalidated': 'validated'"></span>
+            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasSpecialCharacters') ? 'unvalidated': 'validated'"></span>
+            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
+            <ul class="description" *ngIf="myForm.get('passwords.newPassword').invalid">
+              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasNumber')">Должна быть минимум одна цифра</li>
+              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasSmallCase')">Должна быть минимум одна маленькая буква a-z</li>
+              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasCapitalCase')">Должна быть минимум одна большая буква A-Z</li>
+              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasSpecialCharacters')">Должна быть минимум один спец символ</li>
+              <li *ngIf="myForm.get('passwords.newPassword').hasError('minLengthCharacters')">Пароль не меньше 8 символов</li>
+            </ul>
+          </div>
+        </form>
+
+        <div class="fields" formGroupName="passwords">
+          <h5 class="fields-title">Повторите новый пароль</h5>
+          <input class="fields-value" placeholder="Confirm password" formControlName="confirmPassword" >
+          <div class="error-message" *ngIf="myForm.hasError('notSame', 'passwords')" >
+            Ответ отрицательный. Пароли не совпадают
           </div>
         </div>
 
-        <div class="fields" >
-
-            <h5 class="fields-title">Повторите новый пароль</h5>
-            <input class="fields-value" type="password" matInput placeholder="Confirm password" formControlName="confirmPassword" [errorStateMatcher]="matcher"  >
-            <div *ngIf="myForm.hasError('notSame')">
-              Passwords do not match
-            </div>
-
-        </div> -->
 
       </div>
     </div>
@@ -61,21 +49,21 @@
     </div>
     <div class="inform_section__fields">
       <div class="inputs-wrapper">
-<!--
+
         <div class="fields">
           <h5 class="fields-title">Ваш текущий e-mail</h5>
-          <input class="fields-value" type="text" [(ngModel)]="userSettings.oldMail" name="oldMail" maxlength="15">
+          <input class="fields-value" type="text" formControlName="oldMail"  maxlength="15">
         </div>
 
         <div class="fields">
           <h5 class="fields-title">Ваш новый e-mail</h5>
-          <input class="fields-value" type="text" [(ngModel)]="userSettings.newMail" name="newMail" maxlength="15">
+          <input class="fields-value" type="text" formControlName="newMail" maxlength="15">
         </div>
 
         <div class="fields">
           <h5 class="fields-title">Введите текущий пароль</h5>
-          <input class="fields-value" type="text" [(ngModel)]="userSettings.copyNewMail" name="copyNewMail" maxlength="15">
-        </div> -->
+          <input class="fields-value" type="text" formControlName="copyNewMail" maxlength="15">
+        </div>
 
       </div>
     </div>
@@ -84,20 +72,4 @@
     <button class="save-all" type="submit">сохранить изменения</button>
   </div>
   </form>
-
-  <!-- <form [formGroup]="myForm">
-    <mat-form-field>
-      <input matInput placeholder="New password" formControlName="password" required>
-      <mat-error *ngIf="myForm.hasError('required', 'password')">
-          Please enter your new password
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field>
-      <input matInput placeholder="Confirm password" formControlName="confirmPassword" [errorStateMatcher]="matcher">
-      <mat-error *ngIf="myForm.hasError('notSame')">
-          Passwords do not match
-      </mat-error>
-    </mat-form-field>
-  </form> -->
 </div>
