--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -53,7 +53,8 @@
       display: flex;
       align-items: center;
       img {
-        height: 40px;
+        height: 130%;
+        width: auto;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -61,8 +62,8 @@
       }
     }
     &__ava {
-      height: 40px;
-      width: 40px;
+      height: 130%;
+      width: auto;
       border-radius: 50%;
       overflow: hidden;
       position: relative;
