--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.html
@@ -1,5 +1,5 @@
 <div class="inform_section">
-  <form [formGroup]="myForm" (ngSubmit)="updateSettings(myForm)">
+  <form [formGroup]="passForm" (ngSubmit)="updatePass(passForm)">
     <div class="inform_section__title">
       <h3>Смена пароля</h3>
     </div>
@@ -9,41 +9,73 @@
         <div class="fields">
           <div class="field-wrapper">
             <h5 class="fields-title">Старый пароль</h5>
-            <input class="fields-value" type="password" formControlName='oldPassword' maxlength="50">
+            <input class="fields-value" type="text" formControlName='oldPassword' maxlength="50">
+            <div class="succes-message" *ngIf="submitedPassForm && changePasswordResult" >
+              Ответ положительный. Пароль изменен
+            </div>
+            <div class="error-message" *ngIf="!submitedPassForm && !changePasswordResult && passForm.controls.oldPassword.value" >
+              Ответ отрицательный. Пароль другой
+            </div>
+            <div class="error-message" *ngIf="submitedPassForm  && !passForm.controls.oldPassword.value">
+              Ответ отрицательный. Это поле вообще-то обезательное
+            </div>
           </div>
         </div>
 
-        <form class="fields" formGroupName="passwords">
-          <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
-          <input class="fields-value new-passrord" placeholder="New password" formControlName="newPassword" required >
-          <div class="pass-erorrs">
-            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
-            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasCapitalCase') ? 'unvalidated': 'validated'"></span>
-            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasSmallCase') ? 'unvalidated': 'validated'"></span>
-            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('hasSpecialCharacters') ? 'unvalidated': 'validated'"></span>
-            <span [ngClass]="myForm.get('passwords.newPassword').hasError('required') || myForm.get('passwords.newPassword').hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
-            <ul class="description" *ngIf="myForm.get('passwords.newPassword').invalid">
-              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasNumber')">Должна быть минимум одна цифра</li>
-              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasSmallCase')">Должна быть минимум одна маленькая буква a-z</li>
-              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasCapitalCase')">Должна быть минимум одна большая буква A-Z</li>
-              <li *ngIf="myForm.get('passwords.newPassword').hasError('hasSpecialCharacters')">Должна быть минимум один спец символ</li>
-              <li *ngIf="myForm.get('passwords.newPassword').hasError('minLengthCharacters')">Пароль не меньше 8 символов</li>
-            </ul>
+        <form formGroupName="passwords">
+
+          <div class="fields">
+            <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
+            <input class="fields-value new-passrord" placeholder="New password" formControlName="newPassword" required>
+            <div class="pass-erorrs">
+              <span
+                [ngClass]="passForm.get('passwords.newPassword').hasError('required') || passForm.get('passwords.newPassword').hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
+              <span
+                [ngClass]="passForm.get('passwords.newPassword').hasError('required') || passForm.get('passwords.newPassword').hasError('hasCapitalCase') ? 'unvalidated': 'validated'"></span>
+              <span
+                [ngClass]="passForm.get('passwords.newPassword').hasError('required') || passForm.get('passwords.newPassword').hasError('hasSmallCase') ? 'unvalidated': 'validated'"></span>
+              <span
+                [ngClass]="passForm.get('passwords.newPassword').hasError('required') || passForm.get('passwords.newPassword').hasError('hasSpecialCharacters') ? 'unvalidated': 'validated'"></span>
+              <span
+                [ngClass]="passForm.get('passwords.newPassword').hasError('required') || passForm.get('passwords.newPassword').hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
+              <ul class="description" *ngIf="passForm.get('passwords.newPassword').invalid">
+                <li *ngIf="passForm.get('passwords.newPassword').hasError('hasNumber')">Должна быть минимум одна цифра
+                </li>
+                <li *ngIf="passForm.get('passwords.newPassword').hasError('hasSmallCase')">Должна быть минимум одна
+                  маленькая буква a-z</li>
+                <li *ngIf="passForm.get('passwords.newPassword').hasError('hasCapitalCase')">Должна быть минимум одна
+                  большая буква A-Z</li>
+                <li *ngIf="passForm.get('passwords.newPassword').hasError('hasSpecialCharacters')">Должна быть минимум
+                  один спец символ</li>
+                <li *ngIf="passForm.get('passwords.newPassword').hasError('minLengthCharacters')">Пароль не меньше 8
+                  символов</li>
+              </ul>
+            </div>
+            <div class="error-message" *ngIf="submitedPassForm && !passForm.get('passwords.newPassword').value">
+              Ответ отрицательный. Это поле вообще-то обезательное
+            </div>
           </div>
+
+          <div class="fields">
+            <h5 class="fields-title">Повторите новый пароль</h5>
+            <input class="fields-value" placeholder="Confirm password" formControlName="newPassword_confirmation">
+            <div class="error-message" *ngIf="passForm.hasError('notSame', 'passwords')">
+              Ответ отрицательный. Пароли не совпадают
+            </div>
+            <div class="error-message" *ngIf="submitedPassForm && !passForm.get('passwords.newPassword_confirmation').value && !passForm.hasError('notSame', 'passwords')">
+              Ответ отрицательный. Это поле вообще-то обезательное
+            </div>
+          </div>
+
         </form>
-
-        <div class="fields" formGroupName="passwords">
-          <h5 class="fields-title">Повторите новый пароль</h5>
-          <input class="fields-value" placeholder="Confirm password" formControlName="confirmPassword" >
-          <div class="error-message" *ngIf="myForm.hasError('notSame', 'passwords')" >
-            Ответ отрицательный. Пароли не совпадают
-          </div>
-        </div>
-
-
       </div>
     </div>
+    <div class="form-butons">
+      <button class="save-all" type="submit">сохранить изменения</button>
+    </div>
+  </form>
 
+  <form [formGroup]="mailForm" (ngSubmit)="updateMail(passForm)">
     <div class="inform_section__title">
       <h3>Изменение E-mail адреса</h3>
     </div>
@@ -52,24 +84,39 @@
 
         <div class="fields">
           <h5 class="fields-title">Ваш текущий e-mail</h5>
-          <input class="fields-value" type="text" formControlName="oldMail"  maxlength="15">
+          <input class="fields-value" type="text" formControlName="oldMail" maxlength="25">
+          <div class="error-message" *ngIf="mailForm.controls.oldMail.status === 'INVALID' && mailForm.controls.oldMail.value">
+            Ответ отрицательный. У вас не валидное міло
+          </div>
+          <div class="error-message" *ngIf="submitedMail && !mailForm.controls.oldMail.value">
+            Ответ отрицательный. Это поле вообще-то обезательное
+          </div>
         </div>
 
         <div class="fields">
           <h5 class="fields-title">Ваш новый e-mail</h5>
-          <input class="fields-value" type="text" formControlName="newMail" maxlength="15">
+          <input class="fields-value" type="text" formControlName="newMail" maxlength="25">
+          <div class="error-message" *ngIf="mailForm.controls.newMail.status === 'INVALID' && mailForm.controls.newMail.value">
+            Ответ отрицательный. У вас не валидное міло
+          </div>
+          <div class="error-message" *ngIf="submitedMail && !mailForm.controls.newMail.value">
+            Ответ отрицательный. Это поле вообще-то обезательное
+          </div>
         </div>
 
         <div class="fields">
           <h5 class="fields-title">Введите текущий пароль</h5>
-          <input class="fields-value" type="text" formControlName="copyNewMail" maxlength="15">
+          <input class="fields-value" type="text" formControlName="password" maxlength="15">
+          <div class="error-message" *ngIf="submitedMail && submitedMailResult">
+            Ответ отрицательный. Этот пароль не твой
+          </div>
         </div>
 
       </div>
     </div>
 
-  <div class="form-butons">
-    <button class="save-all" type="submit">сохранить изменения</button>
-  </div>
+    <div class="form-butons">
+      <button class="save-all" type="submit">сохранить изменения</button>
+    </div>
   </form>
 </div>
