--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-user-settings.component.scss
@@ -136,6 +136,7 @@
 .fields{
   margin-bottom: 15px;
   width: 100%;
+  position: relative;
   &-title{
     font-style: normal;
     font-weight: normal;
@@ -161,9 +162,18 @@
   }
   .error-message {
     position: absolute;
-    bottom: -4px;
+    bottom: -16px;
     font-size: 12px;
     color: #f44336;
+    font-weight: 400;
+    line-height: 1.125;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+  }
+  .succes-message{
+    position: absolute;
+    bottom: -16px;
+    font-size: 12px;
+    color: green;
     font-weight: 400;
     line-height: 1.125;
     font-family: Roboto, "Helvetica Neue", sans-serif;
