--- a/src/app/chat/components/chat-component/chat-component.scss
+++ b/src/app/chat/components/chat-component/chat-component.scss
@@ -5,16 +5,20 @@
   justify-content: space-between;
   height: 100%;
   overflow: hidden;
+  padding: 25px 15px 0;
+  box-sizing: border-box;
+  background: #fff;
   & > section {
     height: 100%;
     // overflow: auto;
     display: flex;
     flex-direction: column;
-    &> * {
+    & > * {
       height: 100%;
     }
-    .inform {
+    .line {
       background: #f4f7fc;
+
       box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.25);
       border-radius: 4px 4px 0px 0px;
       // height: 66px;
@@ -43,12 +47,10 @@
     //   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     //   background-color: #555;
     // }
-
-
   }
   .collocutors {
     width: 23%;
-    .inform {
+    .line {
       padding: 27px 48px 18px 20px;
       font-family: Source Sans Pro, sans-serif;
       font-style: normal;
@@ -76,7 +78,7 @@
   }
   .messager {
     width: 56%;
-    .inform {
+    .line {
       padding: 23px 23px 20px 20px;
       .collocutor {
         font-family: Source Sans Pro, sans-serif;
@@ -84,7 +86,7 @@
         font-weight: bold;
         font-size: 18px;
         line-height: 23px;
-        color: #323C47;
+        color: #323c47;
         font-weight: 800;
         span {
           font-size: 14px;
@@ -109,12 +111,5 @@
   .collocutors-tools {
     width: 19%;
     background: #ffffff;
-    box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
-    border-radius: 4px;
-    height: 402px;
-    .inform {
-      height: 65px;
-      box-shadow: none;
-    }
   }
 }
