--- a/src/app/chat/components/collocutors-list/collocutors-list.component.html
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
-  <section class="inform">
+<div class="wrapper" *ngIf="chatRooms">
+  <section class="line">
   Все сообщения <span>(1250)</span>
 </section>
 <section class="collocutors-wrap">
@@ -10,7 +10,7 @@
 
   </div>
   <div class="collocutors-list" >
-    <div class="collocutor" *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]">
+    <div class="collocutor" *ngFor="let i of chatRooms" (click)="openChat(i.code)">
       <p class="date">Вчера 22:30</p>
       <div class="message-preview">
         <div class="photo">
