--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -71,7 +71,7 @@
 
             </div>
             <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + imgUrl.link" height="300" />
-            <button class="choose-as-main-photo" (click)="putAsMainPhoto(imgUrl.link)">сделать обложкой</button>
+            <div class="choose-as-main-photo" (click)="putAsMainPhoto(imgUrl.link)">сделать обложкой</div>
           </div>
 
         </ng-container>
