--- a/src/app/chat/components/chat-component/chat-component.html
+++ b/src/app/chat/components/chat-component/chat-component.html
@@ -1,11 +1,12 @@
 <section class="wrapper">
   <section class="collocutors">
-<app-collocutors-list></app-collocutors-list>
+    <app-collocutors-list></app-collocutors-list>
   </section>
   <section class="messager">
-<app-messager></app-messager>
+    <app-messager></app-messager>
   </section>
   <section class="collocutors-tools">
-<app-messager-tools></app-messager-tools>
+    <app-messager-tools *ngIf="chatType === 'work-place'"></app-messager-tools>
+    <app-collocutor-information *ngIf="chatType === 'classic'"></app-collocutor-information>
   </section>
 </section>
