--- a/src/app/chat/components/messager/messager.component.scss
+++ b/src/app/chat/components/messager/messager.component.scss
@@ -1,9 +1,9 @@
 .wrapper {
   padding-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: space-between;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: space-between;
 }
 .messager-wrap {
   position: relative;
@@ -12,44 +12,143 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  .previous-massages{
-    height: 90%;
+  .previous-massages {
+    height: 80%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: left;
     align-items: left;
     overflow: auto;
+    app-message-list {
+      height: 100%;
+    }
   }
   .message-input {
     box-shadow: 0px 15px 30px rgba(16, 27, 79, 0.15);
     border-radius: 10px;
-    height: 10%;
+    height: 17%;
+    max-height: 155px;
     width: 95%;
     // padding: 20px;
     position: absolute;
     bottom: 23px;
     .tools {
-      width: 140px;
-      height: 20px;
-      background-color: red;
+      width: 100%;
+      height: 53px;
       position: absolute;
+      -webkit-box-pack: justify;
+      justify-content: space-between;
+      align-items: center;
       right: 0;
-      top: 0;
+      bottom: 0;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: row;
+      background: #F6F7FF;
+      padding: 0 33px 0 20px;
+      &>div:first-of-type {
+        display: flex;
+        flex-direction: row;
+        &>div {
+          margin-right: 20px;
+        }
+      }
+      .emoji::ng-deep {
+        width: 20px;
+        height: 20px;
+        border: 1px solid #000;
+        border-radius: 50%;
+        position: relative;
+
+        emoji-mart  {
+          position: absolute;
+          // display: none;
+          top:-370px;
+          .emoji-mart {
+            width: 315px !important;
+          }
+        }
+      }
+      .file {
+        position: relative;
+        height: 20px;
+        label {
+          width: 20px;
+          height: 20px;
+          position: relative;
+          cursor: pointer;
+          color: #bfc5d1;
+          &:before {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            content: "\e911";
+            font-family: icoMoon;
+            font-size: 19px;
+          }
+          &:hover{
+            color: #278df3;
+          }
+        }
+      }
+      input[type="file"] {
+        width: 0;
+        height: 0;
+        border: none;
+        font-size: 0;
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        outline: none;
+        border: none;
+        box-shadow: none;
+
+      }
+      button[type="submit"] {
+        width: 30px;
+        height: 30px;
+        background: transparent;
+        position: relative;
+        border: none;
+        box-shadow: none;
+        cursor: pointer;
+        color: #bfc5d1;
+        outline: none;
+        &:before {
+          position: absolute;
+          content: "\e910";
+          font-family: icoMoon;
+          font-size: 25px;
+          line-height: 30px;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+        }
+        &:hover {
+          color: #278df3;
+        }
+      }
     }
     .text-input {
-
-      padding: 20px;
-    min-height: 60px;
+      padding: 20px 60px 20px 20px;
+      min-height: 60px;
       textarea {
         border: none;
         outline: none;
         resize: none;
         width: 100%;
         height: 60px;
-
+        // color: #a6a7a8;
+        font-family: "Source Sans Pro";
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 20px;
+        &:placeholder {
+          color: #a6a7a8;
+        }
       }
     }
-
   }
 }
