--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -21,8 +21,8 @@
   <div class="side-bar">
     <section class="avatar">
       <div class="lines"></div>
-      <img src="/assets//images/images/ava.jpg" alt="avatar" />
-      <p class="name">Анна Цветаева</p>
+      <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + user.avatar" alt="avatar" />
+      <p class="name">{{ user.name }} {{ user.surname}}</p>
       <div class="raiting"></div>
     </section>
     <section class="menu">
