--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/finance-user-settings/finance-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/finance-user-settings/finance-user-settings.component.html
@@ -37,7 +37,7 @@
                 maxlength="4"
                 >
 
-                <!-- <input
+                <input
                 class="fields-value"
                 type="text"
                 [(ngModel)]="userSettings.cardNumber2"
@@ -65,7 +65,7 @@
 
                 mask="9999"
                 maxlength="4"
-                > -->
+                >
               </div>
 
             </div>
