--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
@@ -17,6 +17,11 @@
     padding: 50px 0;
     width: 75%;
   }
+  form{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .top-block{
