--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.scss
@@ -1,11 +1,3 @@
-.form-change-password{
-  display: flex;
-  flex-wrap: wrap;
-  border-bottom: 1px solid #EBEEFF;
-  &-confirm{
-    width: 100%;
-  }
-}
 .inform_section{
   // border-bottom: 1px solid #EBEEFF;
   &__title{
@@ -30,6 +22,14 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+  }
+}
+
+.form-change-mail{
+  display: flex;
+  flex-wrap: wrap;
+  &-confirm{
+    width: 100%;
   }
 }
 
@@ -218,7 +218,7 @@
   box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
   border-radius: 4px;
   border: none;
-  margin: 0px auto 40px;
+  margin: 0 auto 20px;
   padding: 17px 35px 15px;
   text-transform: uppercase;
 }
