--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
@@ -12,7 +12,7 @@
       <span class="offer-name">{{ offerData.user.name }} {{ offerData.user.surname }}</span>
       <div class="offer-status">Уровень: Опытный(-ая)</div>
       <div class="user-raiting-wrapp">
-        <p class="star-raiting">{{ offerData.raiting }}<span class="user-comments">({{ offerData.comments_count }} +отзывов)</span></p>
+        <p class="star-raiting">{{ offerData.raiting }}<span class="user-comments">({{ convertedNumberOfComments }} отзывов)</span></p>
       </div>
       <div class="onlineStatus online">Oнлайн</div>
     </div>
