--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -16,19 +16,22 @@
   position: relative;
   width: 214px;
   margin-right: 40px;
+
+  // padding: 5px;
+  border: 1px solid black;
   .title{
     position: relative;
     cursor: pointer;
-    p{
-     margin: 0;
-     padding: 22px 20px;
-     font-family: "Source Sans Pro";
-     font-style: normal;
-     font-weight: normal;
-     font-size: 16px;
-     line-height: 21px;
-     color: #323C47;
-    }
+    // p{
+    //  margin: 0;
+    //  padding: 22px 20px;
+    //  font-family: "Source Sans Pro";
+    //  font-style: normal;
+    //  font-weight: normal;
+    //  font-size: 16px;
+    //  line-height: 21px;
+    //  color: #323C47;
+    // }
     .btn-show-full{
       display: block;
       width: 12px;
@@ -110,6 +113,36 @@
       padding: 12px 5px;
     }
   }
+
+  ::ng-deep {
+    .mat-form-field{
+      width: 100%;
+    }
+    .mat-form-field-appearance-legacy {
+      .mat-form-field-label {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+      }
+      .mat-form-field-wrapper {
+        padding-bottom: 0;
+      }
+      .mat-form-field-underline {
+        display: none;
+      }
+      .mat-form-field-infix{
+        padding: 0;
+        border: none;
+      }
+    }
+    .mat-select-arrow-wrapper{
+      display: none;
+    }
+    .mat-form-field-label-wrapper{
+      padding-top: 23px;
+    }
+  }
 }
 
 .set-filter-btn{
@@ -124,4 +157,78 @@
   height: fit-content;
   border: 1px solid black;
   cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+.filter-item ::ng-deep{
+  mat-select {
+    border-radius: 3px;
+    font-size: 16px;
+    line-height: 21px;
+    color: #323c47;
+    padding: 14px 20px 15px;
+    box-sizing: border-box;
+    border: 1px solid rgba(220, 224, 230, 0.1);
+    box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
+  }
+  .mat-select-arrow{
+    border: none;
+    width: 12px;
+    height: 8px;
+    background-image: url(/assets/images/svg/settings-page/arrow-down.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .ng-star-inserted{
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 21px;
+    color: #323C47;
+  }
+  .mat-form-field {
+    .ng-star-inserted {
+      // font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 21px;
+      color: #323c47;
+      &.mat-error {
+        color: #f44336;
+      }
+    }
+
+  }
+}
+::ng-deep .cdk-overlay-container {
+  .mat-option {
+    font-family: Source Sans Pro, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 21px;
+    color: #707683;
+  }
+
+  .mat-option:hover:not(.mat-option-disabled),
+  .mat-option:focus:not(.mat-option-disabled) {
+    background: #3c7eea;
+    color: #fff;
+  }
+
+  // .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
+  //   // bg selected
+  // }
+
+  .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
+    color: #323c47;
+  }
 }
