--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -1,3 +1,5 @@
+// @import "@material/select/mdc-select";
+
 .wrapper{
   max-width: 1499px;
   margin: 0 auto;
@@ -114,121 +116,112 @@
     }
   }
 
-  ::ng-deep {
-    .mat-form-field{
-      width: 100%;
-    }
-    .mat-form-field-appearance-legacy {
-      .mat-form-field-label {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-      }
-      .mat-form-field-wrapper {
-        padding-bottom: 0;
-      }
-      .mat-form-field-underline {
-        display: none;
-      }
-      .mat-form-field-infix{
-        padding: 0;
-        border: none;
-      }
-    }
-    .mat-select-arrow-wrapper{
-      display: none;
-    }
-    .mat-form-field-label-wrapper{
-      padding-top: 23px;
-    }
-  }
+/* select starting stylings ------------------------------*/
+.select {
+  font-family:
+    'Roboto','Helvetica','Arial',sans-serif;
+	position: relative;
+	width: 350px;
 }
 
-.set-filter-btn{
-  padding: 15px 20px;
-  margin: 0;
-  font-family: "Source Sans Pro";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 21px;
-  color: #323C47;
-  height: fit-content;
-  border: 1px solid black;
-  cursor: pointer;
+.select-text {
+	position: relative;
+	font-family: inherit;
+	background-color: transparent;
+	width: 350px;
+	padding: 10px 10px 10px 0;
+	font-size: 18px;
+	border-radius: 0;
+	border: none;
+	border-bottom: 1px solid rgba(0,0,0, 0.12);
+}
+
+/* Remove focus */
+.select-text:focus {
+	outline: none;
+	border-bottom: 1px solid rgba(0,0,0, 0);
+}
+
+	/* Use custom arrow */
+.select .select-text {
+	appearance: none;
+	-webkit-appearance:none
+}
+
+.select:after {
+	position: absolute;
+	top: 18px;
+	right: 10px;
+	/* Styling the down arrow */
+	width: 0;
+	height: 0;
+	padding: 0;
+	content: '';
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid rgba(0, 0, 0, 0.12);
+	pointer-events: none;
 }
 
 
-
-
-
-
-
-
-
-.filter-item ::ng-deep{
-  mat-select {
-    border-radius: 3px;
-    font-size: 16px;
-    line-height: 21px;
-    color: #323c47;
-    padding: 14px 20px 15px;
-    box-sizing: border-box;
-    border: 1px solid rgba(220, 224, 230, 0.1);
-    box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
-  }
-  .mat-select-arrow{
-    border: none;
-    width: 12px;
-    height: 8px;
-    background-image: url(/assets/images/svg/settings-page/arrow-down.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  .ng-star-inserted{
-    font-family: Source Sans Pro;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 21px;
-    color: #323C47;
-  }
-  .mat-form-field {
-    .ng-star-inserted {
-      // font-style: normal;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 21px;
-      color: #323c47;
-      &.mat-error {
-        color: #f44336;
-      }
-    }
-
-  }
+/* LABEL ======================================= */
+.select-label {
+	color: rgba(0,0,0, 0.26);
+	font-size: 18px;
+	font-weight: normal;
+	position: absolute;
+	pointer-events: none;
+	left: 0;
+	top: 10px;
+	transition: 0.2s ease all;
 }
-::ng-deep .cdk-overlay-container {
-  .mat-option {
-    font-family: Source Sans Pro, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 21px;
-    color: #707683;
-  }
 
-  .mat-option:hover:not(.mat-option-disabled),
-  .mat-option:focus:not(.mat-option-disabled) {
-    background: #3c7eea;
-    color: #fff;
-  }
+/* active state */
+.select-text:focus ~ .select-label, .select-text:valid ~ .select-label {
+	color: #2F80ED;
+	top: -20px;
+	transition: 0.2s ease all;
+	font-size: 14px;
+}
 
-  // .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
-  //   // bg selected
-  // }
+/* BOTTOM BARS ================================= */
+.select-bar {
+	position: relative;
+	display: block;
+	width: 350px;
+}
 
-  .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
-    color: #323c47;
-  }
+.select-bar:before, .select-bar:after {
+	content: '';
+	height: 2px;
+	width: 0;
+	bottom: 1px;
+	position: absolute;
+	background: #2F80ED;
+	transition: 0.2s ease all;
+}
+
+.select-bar:before {
+	left: 50%;
+}
+
+.select-bar:after {
+	right: 50%;
+}
+
+/* active state */
+.select-text:focus ~ .select-bar:before, .select-text:focus ~ .select-bar:after {
+	width: 50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.select-highlight {
+	position: absolute;
+	height: 60%;
+	width: 100px;
+	top: 25%;
+	left: 0;
+	pointer-events: none;
+	opacity: 0.5;
+}
 }
